@@ -37,8 +37,6 @@ import org.slf4j.LoggerFactory;
 
 import com.google.common.collect.ArrayListMultimap;
 import com.google.common.collect.Iterables;
-import com.google.common.collect.Lists;
-import com.google.common.collect.Maps;
 import com.google.common.collect.Multimap;
 import com.google.common.io.ByteSource;
 import com.google.common.io.Resources;
@@ -53,6 +51,7 @@ import com.enonic.xp.admin.impl.json.content.ContentPermissionsJson;
 import com.enonic.xp.admin.impl.json.content.ContentSummaryJson;
 import com.enonic.xp.admin.impl.json.content.ContentSummaryListJson;
 import com.enonic.xp.admin.impl.json.content.ContentTreeSelectorListJson;
+import com.enonic.xp.admin.impl.json.content.ContentVersionJson;
 import com.enonic.xp.admin.impl.json.content.ContentsExistByPathJson;
 import com.enonic.xp.admin.impl.json.content.ContentsExistJson;
 import com.enonic.xp.admin.impl.json.content.DependenciesAggregationJson;
@@ -96,6 +95,7 @@ import com.enonic.xp.admin.impl.rest.resource.content.json.ReorderChildJson;
 import com.enonic.xp.admin.impl.rest.resource.content.json.ReorderChildrenJson;
 import com.enonic.xp.admin.impl.rest.resource.content.json.ResolvePublishContentResultJson;
 import com.enonic.xp.admin.impl.rest.resource.content.json.ResolvePublishDependenciesJson;
+import com.enonic.xp.admin.impl.rest.resource.content.json.RevertContentJson;
 import com.enonic.xp.admin.impl.rest.resource.content.json.SetActiveVersionJson;
 import com.enonic.xp.admin.impl.rest.resource.content.json.SetChildOrderJson;
 import com.enonic.xp.admin.impl.rest.resource.content.json.UndoPendingDeleteContentJson;
@@ -111,7 +111,9 @@ import com.enonic.xp.admin.impl.rest.resource.content.task.PublishRunnableTask;
 import com.enonic.xp.admin.impl.rest.resource.content.task.UnpublishRunnableTask;
 import com.enonic.xp.admin.impl.rest.resource.schema.content.ContentTypeIconResolver;
 import com.enonic.xp.admin.impl.rest.resource.schema.content.ContentTypeIconUrlResolver;
+import com.enonic.xp.attachment.Attachment;
 import com.enonic.xp.attachment.AttachmentNames;
+import com.enonic.xp.attachment.Attachments;
 import com.enonic.xp.attachment.CreateAttachment;
 import com.enonic.xp.attachment.CreateAttachments;
 import com.enonic.xp.branch.Branches;
@@ -134,6 +136,8 @@ import com.enonic.xp.content.ContentQuery;
 import com.enonic.xp.content.ContentService;
 import com.enonic.xp.content.ContentValidityParams;
 import com.enonic.xp.content.ContentValidityResult;
+import com.enonic.xp.content.ContentVersion;
+import com.enonic.xp.content.ContentVersionId;
 import com.enonic.xp.content.Contents;
 import com.enonic.xp.content.CreateMediaParams;
 import com.enonic.xp.content.FindContentByParentParams;
@@ -142,6 +146,7 @@ import com.enonic.xp.content.FindContentIdsByParentResult;
 import com.enonic.xp.content.FindContentIdsByQueryResult;
 import com.enonic.xp.content.FindContentVersionsParams;
 import com.enonic.xp.content.FindContentVersionsResult;
+import com.enonic.xp.content.GetActiveContentVersionParams;
 import com.enonic.xp.content.GetActiveContentVersionsParams;
 import com.enonic.xp.content.GetActiveContentVersionsResult;
 import com.enonic.xp.content.GetContentByIdsParams;
@@ -183,14 +188,17 @@ import com.enonic.xp.security.acl.Permission;
 import com.enonic.xp.security.auth.AuthenticationInfo;
 import com.enonic.xp.task.TaskResultJson;
 import com.enonic.xp.task.TaskService;
+import com.enonic.xp.util.BinaryReference;
 import com.enonic.xp.util.Exceptions;
 import com.enonic.xp.web.HttpStatus;
 import com.enonic.xp.web.multipart.MultipartForm;
 import com.enonic.xp.web.multipart.MultipartItem;
 
+import static com.google.common.base.Strings.isNullOrEmpty;
+import static com.google.common.base.Strings.nullToEmpty;
 import static java.lang.Math.toIntExact;
+import static java.util.Optional.ofNullable;
 import static org.apache.commons.lang.StringUtils.containsIgnoreCase;
-import static org.apache.commons.lang.StringUtils.isBlank;
 
 @SuppressWarnings("UnusedDeclaration")
 @Path(ResourceConstants.REST_ROOT + "content")
@@ -271,11 +279,11 @@ public final class ContentResource
         final String focalX = form.getAsString( "focalX" );
         final String focalY = form.getAsString( "focalY" );
 
-        if ( StringUtils.isNotBlank( focalX ) )
+        if ( !nullToEmpty( focalX ).isBlank() )
         {
             createMediaParams.focalX( Double.valueOf( focalX ) );
         }
-        if ( StringUtils.isNotBlank( focalY ) )
+        if ( !nullToEmpty( focalY ).isBlank() )
         {
             createMediaParams.focalY( Double.valueOf( focalY ) );
         }
@@ -327,11 +335,11 @@ public final class ContentResource
         final String focalX = form.getAsString( "focalX" );
         final String focalY = form.getAsString( "focalY" );
 
-        if ( StringUtils.isNotBlank( focalX ) )
+        if ( !nullToEmpty( focalX ).isBlank() )
         {
             params.focalX( Double.valueOf( focalX ) );
         }
-        if ( StringUtils.isNotBlank( focalY ) )
+        if ( !nullToEmpty( focalY ).isBlank() )
         {
             params.focalY( Double.valueOf( focalY ) );
         }
@@ -489,7 +497,7 @@ public final class ContentResource
     @Path("getDependencies")
     public GetDependenciesResultJson getDependencies( final ContentIdsJson params )
     {
-        final Map<String, DependenciesJson> result = Maps.newHashMap();
+        final Map<String, DependenciesJson> result = new HashMap<>();
 
         params.getContentIds().forEach( ( id -> {
             final ContentDependencies dependencies = contentService.getDependencies( id );
@@ -608,8 +616,7 @@ public final class ContentResource
             id -> this.contentService.getPermissionsById( id ).isAllowedFor( ContextAccessor.current().getAuthInfo().getPrincipals(),
                                                                              Permission.PUBLISH );
         //check if user has access to publish every content
-        final Boolean isAllPublishable =
-            authInfo.hasRole( RoleKeys.ADMIN ) || fullPublishList.stream().allMatch( publishAllowedCondition );
+        final Boolean isAllPublishable = authInfo.hasRole( RoleKeys.ADMIN ) || fullPublishList.stream().allMatch( publishAllowedCondition );
 
         //check that not all contents are pending delete
         final Boolean isAllPendingDelete = getNotPendingDeletion( fullPublishList, compareResults ).getSize() == 0;
@@ -650,7 +657,7 @@ public final class ContentResource
 
     private ContentIds sortContentIds( final ContentIds contentIds, final String field )
     {
-        if ( StringUtils.isBlank( field ) )
+        if ( nullToEmpty( field ).isBlank() )
         {
             return contentIds;
         }
@@ -758,7 +765,7 @@ public final class ContentResource
             final String moveBefore = reorderChildJson.getMoveBefore();
             builder.add( ReorderChildParams.create().
                 contentToMove( ContentId.from( reorderChildJson.getContentId() ) ).
-                contentToMoveBefore( isBlank( moveBefore ) ? null : ContentId.from( moveBefore ) ).
+                contentToMoveBefore( nullToEmpty( moveBefore ).isBlank() ? null : ContentId.from( moveBefore ) ).
                 build() );
         }
 
@@ -768,12 +775,21 @@ public final class ContentResource
     }
 
     @GET
-    public ContentIdJson getById( @QueryParam("id") final String idParam,
+    public ContentIdJson getById( @QueryParam("id") final String idParam, @QueryParam("versionId") final String versionIdParam,
                                   @QueryParam("expand") @DefaultValue(EXPAND_FULL) final String expandParam )
     {
 
         final ContentId id = ContentId.from( idParam );
-        final Content content = contentService.getById( id );
+        Content content;
+        if ( versionIdParam == null )
+        {
+            content = contentService.getById( id );
+        }
+        else
+        {
+            final ContentVersionId versionId = ContentVersionId.from( versionIdParam );
+            content = contentService.getByIdAndVersionId( id, versionId );
+        }
 
         if ( content == null )
         {
@@ -977,7 +993,7 @@ public final class ContentResource
     {
         final ContentPath parentContentPath;
 
-        if ( StringUtils.isEmpty( parentIdParam ) )
+        if ( isNullOrEmpty( parentIdParam ) )
         {
             parentContentPath = null;
         }
@@ -1309,7 +1325,7 @@ public final class ContentResource
     public LocaleListJson getLocales( @QueryParam("query") final String query )
     {
         Locale[] locales = Locale.getAvailableLocales();
-        if ( StringUtils.isNotBlank( query ) )
+        if ( !nullToEmpty( query ).isBlank() )
         {
             String trimmedQuery = query.trim();
             locales = Arrays.stream( locales ).
@@ -1321,15 +1337,14 @@ public final class ContentResource
                     containsIgnoreCase( locale.getDisplayVariant( locale ), trimmedQuery ) ||
                     containsIgnoreCase( locale.getCountry(), trimmedQuery ) ||
                     containsIgnoreCase( locale.getDisplayCountry( locale ), trimmedQuery ) ||
-                    containsIgnoreCase( getFormattedDisplayName( locale ), trimmedQuery ) &&
-                        StringUtils.isNotEmpty( locale.toLanguageTag() ) && StringUtils.isNotEmpty( locale.getDisplayName() ) ).
+                    containsIgnoreCase( getFormattedDisplayName( locale ), trimmedQuery ) && !isNullOrEmpty( locale.toLanguageTag() ) &&
+                        !isNullOrEmpty( locale.getDisplayName() ) ).
                 toArray( Locale[]::new );
         }
         else
         {
             locales = Arrays.stream( locales ).
-                filter(
-                    ( locale ) -> StringUtils.isNotEmpty( locale.toLanguageTag() ) && StringUtils.isNotEmpty( locale.getDisplayName() ) ).
+                filter( ( locale ) -> !isNullOrEmpty( locale.toLanguageTag() ) && !isNullOrEmpty( locale.getDisplayName() ) ).
                 toArray( Locale[]::new );
         }
         return new LocaleListJson( locales );
@@ -1388,7 +1403,7 @@ public final class ContentResource
             accessPrincipals.put( access, principals );
         }
 
-        final List<EffectivePermissionJson> permissionsJson = Lists.newArrayList();
+        final List<EffectivePermissionJson> permissionsJson = new ArrayList<>();
         for ( Access access : Access.values() )
         {
             final EffectivePermissionAccessJson accessJson = new EffectivePermissionAccessJson();
@@ -1409,12 +1424,133 @@ public final class ContentResource
     {
 
         final FindContentByParentParams params = FindContentByParentParams.create().
-            parentId( StringUtils.isNotEmpty( parentId ) ? ContentId.from( parentId ) : null ).
-            childOrder( StringUtils.isNotEmpty( childOrder ) ? ChildOrder.from( childOrder ) : null ).
+            parentId( isNullOrEmpty( parentId ) ? null : ContentId.from( parentId ) ).
+            childOrder( isNullOrEmpty( childOrder ) ? null : ChildOrder.from( childOrder ) ).
             build();
 
         final FindContentIdsByParentResult result = this.contentService.findIdsByParent( params );
         return result.getContentIds().stream().map( contentId -> new ContentIdJson( contentId ) ).collect( Collectors.toList() );
+    }
+
+    @POST
+    @Path("revert")
+    public ContentVersionJson revert( final RevertContentJson params )
+    {
+        final ContentVersionId contentVersionId = ContentVersionId.from( params.getVersionId() );
+
+        final Content versionedContent =
+            params.getContentKey().startsWith( "/" )
+                ? contentService.getByPathAndVersionId( ContentPath.from( params.getContentKey() ), contentVersionId )
+                : contentService.getByIdAndVersionId( ContentId.from( params.getContentKey() ), contentVersionId );
+
+        if ( versionedContent == null )
+        {
+            throw JaxRsExceptions.notFound( "Content with contentKey [%s] and versionId [%s] not found", params.getContentKey(),
+                                            params.getVersionId() );
+        }
+
+        final Content revertedContent = contentService.update( prepareUpdateContentParams( versionedContent, contentVersionId ) );
+
+        final ContentVersion contentVersion = contentService.getActiveVersion( GetActiveContentVersionParams.create().
+            branch( ContentConstants.BRANCH_DRAFT ).
+            contentId( revertedContent.getId() ).
+            build() );
+
+        if ( contentVersion != null )
+        {
+            return new ContentVersionJson( contentVersion, principalsResolver );
+        }
+
+        return null;
+    }
+
+
+    private UpdateContentParams prepareUpdateContentParams( final Content versionedContent, final ContentVersionId contentVersionId )
+    {
+        final UpdateContentParams updateParams = new UpdateContentParams().
+            contentId( versionedContent.getId() ).
+            editor( edit -> {
+                edit.data = versionedContent.getData();
+                edit.displayName = versionedContent.getDisplayName();
+                edit.extraDatas = versionedContent.getAllExtraData();
+                edit.page = versionedContent.getPage();
+                edit.language = versionedContent.getLanguage();
+                edit.owner = versionedContent.getOwner();
+                edit.thumbnail = versionedContent.getThumbnail();
+                edit.workflowInfo = WorkflowInfo.inProgress();
+            } );
+
+        updateAttachments( versionedContent, contentVersionId, updateParams );
+
+        return updateParams;
+    }
+
+    private void updateAttachments( final Content versionedContent, final ContentVersionId contentVersionId,
+                                    final UpdateContentParams updateParams )
+    {
+        final Content content = contentService.getById( versionedContent.getId() );
+
+        final List<BinaryReference> sourceAttachments =
+            ofNullable( content.getAttachments() ).orElse( Attachments.empty() ).stream().map( Attachment::getBinaryReference ).collect(
+                Collectors.toList() );
+
+        final List<BinaryReference> targetAttachments =
+            ofNullable( versionedContent.getAttachments() ).orElse( Attachments.empty() ).stream().map(
+                Attachment::getBinaryReference ).collect( Collectors.toList() );
+
+        List<BinaryReference> difference;
+        if ( sourceAttachments.size() > targetAttachments.size() )
+        {
+            difference = sourceAttachments.stream().filter( ref -> !targetAttachments.contains( ref ) ).collect( Collectors.toList() );
+        }
+        else
+        {
+            difference = targetAttachments.stream().filter( ref -> !sourceAttachments.contains( ref ) ).collect( Collectors.toList() );
+        }
+
+        if ( !difference.isEmpty() )
+        {
+            updateParams.clearAttachments( true );
+            updateParams.createAttachments(
+                createAttachments( versionedContent.getId(), contentVersionId, versionedContent.getAttachments() ) );
+        }
+    }
+
+    private CreateAttachments createAttachments( final ContentId contentId, final ContentVersionId contentVersionId,
+                                                 final Attachments attachments )
+    {
+        final CreateAttachments.Builder createBuilder = CreateAttachments.create();
+
+        attachments.forEach( attachment -> {
+            final CreateAttachment createAttachment = createAttachment( contentId, contentVersionId, attachment );
+
+            if ( createAttachment != null )
+            {
+                createBuilder.add( createAttachment );
+            }
+        } );
+
+        final CreateAttachments createAttachments = createBuilder.build();
+
+        return createAttachments.isNotEmpty() ? createAttachments : null;
+    }
+
+    private CreateAttachment createAttachment( final ContentId contentId, final ContentVersionId contentVersionId,
+                                               final Attachment sourceAttachment )
+    {
+        final ByteSource sourceBinary = contentService.getBinary( contentId, contentVersionId, sourceAttachment.getBinaryReference() );
+
+        if ( sourceBinary != null )
+        {
+            return CreateAttachment.create().
+                name( sourceAttachment.getName() ).
+                mimeType( sourceAttachment.getMimeType() ).
+                byteSource( sourceBinary ).
+                text( sourceAttachment.getTextContent() ).
+                build();
+        }
+
+        return null;
     }
 
     private Content doCreateAttachment( final String attachmentName, final MultipartForm form )
