@@ -6,7 +6,6 @@ import java.time.Instant;
 import java.util.List;
 import java.util.stream.Collectors;
 
-import org.apache.commons.lang.StringUtils;
 import org.osgi.service.component.ComponentContext;
 import org.osgi.service.component.annotations.Activate;
 import org.osgi.service.component.annotations.Component;
@@ -63,6 +62,8 @@ import com.enonic.xp.repository.RepositoryService;
 import com.enonic.xp.security.SystemConstants;
 import com.enonic.xp.util.Version;
 
+import static com.google.common.base.Strings.nullToEmpty;
+
 @Component(immediate = true)
 @SuppressWarnings("WeakerAccess")
 public class DumpServiceImpl
@@ -101,7 +102,7 @@ public class DumpServiceImpl
         }
 
         final String dumpName = params.getDumpName();
-        if ( StringUtils.isBlank( dumpName ) )
+        if ( nullToEmpty( dumpName ).isBlank() )
         {
             throw new RepoDumpException( "dump name cannot be empty" );
         }
